test/pending/neg/t1038.check
t1038.scala:4: error: wrong number of arguments for constructor X: (Int)X
  val a = new X
          ^
one error found
